force-app/main/default/objects/Program__c/Program__c.object-meta.xml
<CustomObject>
    <description>Program is an entity related to master information since this entity is linked to : a client, an event, a hotel (not necessarily), a gift (not necessarily), an experience (not necessarily) and a restaurant (not necessarily</description>
    <label>Program</label>
    <nameField>
        <label>Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>