force-app/main/default/objects/Program__c/fields/Car_required__c.field-meta.xml
<CustomField>
    <fullName>Car_required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Car required</label>
    <type>Checkbox</type>
</CustomField>