force-app/main/default/objects/Program__c/fields/Flight_paid__c.field-meta.xml
<CustomField>
    <fullName>Flight_paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flight paid</label>
    <type>Checkbox</type>
</CustomField>