force-app/main/default/objects/Program__c/fields/Inviting_Zone__c.field-meta.xml
<CustomField>
    <fullName>Inviting_Zone__c</fullName>
    <label>Inviting Zone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AMERICAS</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>JAPAN</fullName>
            </value>
            <value>
                <fullName>NORTH ASIA</fullName>
            </value>
            <value>
                <fullName>SOUTH ASIA</fullName>
            </value>
            <value>
                <fullName>KOREA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>