force-app/main/default/objects/Program__c/fields/LV_Host__c.field-meta.xml
<CustomField>
    <fullName>LV_Host__c</fullName>
    <label>LV Host</label>
    <type>TextArea</type>
</CustomField>