force-app/main/default/objects/Program__c/fields/Visit_from__c.field-meta.xml
<CustomField>
    <fullName>Visit_from__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>Visit begining from the date defined here</description>
    <label>Visit from</label>
    <type>Date</type>
</CustomField>