force-app/main/default/objects/Program__c/fields/Visit_to__c.field-meta.xml
<CustomField>
    <fullName>Visit_to__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>Visit ending on date defined here</description>
    <label>Visit to</label>
    <type>Date</type>
</CustomField>