force-app/main/default/objects/Program__c/recordTypes/Business_Program.recordType-meta.xml
<RecordType>
    <fullName>Business_Program</fullName>
    <active>true</active>
    <label>Client Program</label>
</RecordType>