force-app/main/default/objects/Program__c/recordTypes/Template_Program.recordType-meta.xml
<RecordType>
    <fullName>Template_Program</fullName>
    <active>true</active>
    <label>Template Program</label>
</RecordType>