force-app/main/default/objects/Program__c/validationRules/VR_ClientRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_ClientRequired</fullName>
    <active>true</active>
    <description>Client must be selected when cloning template program</description>
    <errorConditionFormula>RecordType.DeveloperName = &apos;Business_Program&apos; &amp;&amp;   ISBLANK( AccountId__c )</errorConditionFormula>
    <errorDisplayField>AccountId__c</errorDisplayField>
    <errorMessage>You must select a client</errorMessage>
</ValidationRule>