force-app/main/default/objects/Program__c/validationRules/VR_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Date</fullName>
    <active>true</active>
    <errorConditionFormula>if(Visit_from__c &lt;= Visit_to__c , false, true)</errorConditionFormula>
    <errorMessage>Visit from date must be equal or earlier than Visit to date</errorMessage>
</ValidationRule>