force-app/main/default/objects/Program__c/validationRules/VR_ProgramCancelledChecked.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_ProgramCancelledChecked</fullName>
    <active>true</active>
    <description>If the Status is Cancelled, Reason field is required.</description>
    <errorConditionFormula>Text(Status__c)  =  &quot;Cancelled&quot;
&amp;&amp;
Reason__c  =  &quot;&quot;</errorConditionFormula>
    <errorDisplayField>Reason__c</errorDisplayField>
    <errorMessage>If the Status is &quot;Cancelled&quot;, &quot;Reason&quot; field is required.</errorMessage>
</ValidationRule>