force-app/main/default/objects/Program__c/listViews/All_Programs.listView-meta.xml
<ListView>
    <fullName>All_Programs</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>EventId__c</columns>
    <columns>AccountId__c</columns>
    <columns>Visit_from__c</columns>
    <columns>Visit_to__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Programs</label>
    <language>en_US</language>
</ListView>